<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="5"
    android:useDefaultMargins="false"
    >

    <android.widget.Button
        android:id="@+id/btn_clr"
        style="@style/FunctionalNumberButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:background="@drawable/func_number_btn"
        android:text="@string/buttonClear"
        />
    <android.widget.Button
        android:id="@+id/btn_invert_sign"
        style="@style/FunctionalNumberButtons"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/buttonToggleSign" />

    <android.widget.Button
        android:id="@+id/btn_percentage"
        style="@style/FunctionalNumberButtons"
        android:layout_row="0"
        android:layout_column="2"
        android:background="@drawable/func_number_btn"
        android:text="@string/buttonSquareRoot" />

    <android.widget.Button
        android:id="@+id/btn_plus"
        style="@style/FunctionalOperatorButton"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/buttonAdd" />

    <android.widget.Button
        android:id="@+id/btn_one"
        style="@style/FunctionalNumberButtons"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@drawable/func_number_btn"
        android:text="1" />

    <android.widget.Button
        android:id="@+id/btn_two"
        style="@style/FunctionalNumberButtons"
        android:layout_row="1"
        android:layout_column="1"
        android:text="2" />

    <android.widget.Button
        android:id="@+id/btn_three"
        style="@style/FunctionalNumberButtons"
        android:layout_row="1"
        android:layout_column="2"
        android:background="@drawable/func_number_btn"
        android:text="3" />

    <android.widget.Button
        android:id="@+id/btn_minus"
        style="@style/FunctionalOperatorButton"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/buttonSubtract" />

    <android.widget.Button
        android:id="@+id/btn_four"
        style="@style/FunctionalNumberButtons"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@drawable/func_number_btn"
        android:text="4" />

    <android.widget.Button
        android:id="@+id/btn_five"
        style="@style/FunctionalNumberButtons"
        android:layout_row="2"
        android:layout_column="1"
        android:text="5" />

    <android.widget.Button
        android:id="@+id/btn_six"
        style="@style/FunctionalNumberButtons"
        android:layout_row="2"
        android:layout_column="2"
        android:background="@drawable/func_number_btn"
        android:text="6" />

    <android.widget.Button
        android:id="@+id/btn_multiply"
        style="@style/FunctionalOperatorButton"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/buttonMultiply" />

    <android.widget.Button
        android:id="@+id/btn_seven"
        style="@style/FunctionalNumberButtons"
        android:layout_row="3"
        android:layout_column="0"
        android:background="@drawable/func_number_btn"
        android:text="7" />

    <android.widget.Button
        android:id="@+id/btn_eight"
        style="@style/FunctionalNumberButtons"
        android:layout_row="3"
        android:layout_column="1"
        android:text="8" />

    <android.widget.Button
        android:id="@+id/btn_nine"
        style="@style/FunctionalNumberButtons"
        android:layout_row="3"
        android:layout_column="2"
        android:background="@drawable/func_number_btn"
        android:text="9" />

    <android.widget.Button
        android:id="@+id/btn_divide"
        style="@style/FunctionalOperatorButton"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/buttonDivide" />

    <android.widget.Button
        android:id="@+id/btn_zero"
        style="@style/FunctionalNumberButtons"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@drawable/func_number_btn"
        android:text="0" />

    <android.widget.Button
        android:id="@+id/btn_decimal"
        style="@style/FunctionalNumberButtons"
        android:layout_row="4"
        android:layout_column="1"
        android:text="." />

    <android.widget.Button
        android:id="@+id/btn_cal"
        style="@style/FunctionalCalButton"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/buttonEquals" />


</GridLayout>