<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutActivity">

    <TextView
        android:id="@+id/tv_relative_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorRed"
        android:text="@string/relative_layout_title"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_relative_question"
        android:layout_marginLeft="20dp"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/relative_question" />

    <EditText
        android:id="@+id/et_relative_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tv_relative_question"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_toEndOf="@+id/tv_relative_question" />

    <Button
        android:id="@+id/btn_relative_back_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/et_relative_name"
        android:layout_toRightOf="@+id/tv_relative_question"
        android:layout_centerInParent="true"
        android:text="@string/back_btn" />

</RelativeLayout>